--- a/frontend/css/main.scss
+++ b/frontend/css/main.scss
@@ -1,29 +1,26 @@
 .card {
-  box-shadow: 0 8px 25px 0 rgba(0,0,0,0.2);
-  -webkit-box-shadow: 0 8px 25px 0 rgba(0,0,0,0.2);
-  -webkit-print-color-adjust: exact;
-  -webkit-filter:opacity(1);
-  color-adjust: exact;
+  border: 1px black solid;
+  position: relative;
 }
 
 .card-title {
   font-family: "Lucida Console", Lucida, monospace;
   font-size: 1.5em;
-  padding: 36px;
+  padding: 20px;
   background: #fdfdfd;
   height: 180px;
 }
 
 .card-subtitle {
-  font-size: 2em;
+  font-size: 1em;
   background: dodgerblue;
-  height: 70px;
+  height: 40px;
   width: 100%;
   display: table;
 }
 
 .card-subtitle-text {
-  padding-left: 36px;
+  padding-left: 20px;
   display: table-cell;
   vertical-align: middle;
   line-height: normal;
@@ -32,15 +29,15 @@
 .card-id {
   text-align: right;
   min-width: 1.5em;
-  font-size: 2.5em;
+  font-size: 1em;
   position: absolute;
   float: right;
   display: inline-block;
   background: #d4f3e8;
   border-radius: 25px;
   padding: 5px;
-  bottom: 65px;
-  right: 40px;
+  bottom: 25px;
+  right: 20px;
 }
 
 .grid {
@@ -58,7 +55,6 @@
   border: 1px dashed #cccccc;
   vertical-align:middle !important;
   width: 500px;
-  position: relative;
   padding: 20px 20px;
 }
 
@@ -67,10 +63,6 @@
     page-break-inside: avoid;
   }
   .card {
-    box-shadow: 0 8px 25px 0 rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0 8px 25px 0 rgba(0,0,0,0.2);
-    -webkit-print-color-adjust: exact !important;
-    -webkit-filter: drop-shadow(0 8px 25px #ccc);
-    color-adjust: exact;
+    border: 1px black solid;
   }
 }
